--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,214 @@
   --color-muted: rgba(255,255,255,0.6);
 }
 
+   /* ----- Home page ----- */
+   .content{
+    grid-area: content;
+    margin: 0;
+    padding: 0;
+    justify-items: center;
+}
+.slider{
+    background-image: url(/img/img1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 481px;
+    width: 100%;
+    justify-items: center;
+    align-content: center;
+    text-align: center;
+}
+.slider h1{
+    width: 400px;
+    color: aliceblue;
+    font-size: 50px;
+    text-shadow: 2px 7px 5px black;
+}
+.slider p{
+    width: 800px;
+    color: aliceblue;
+    font-size: 30px;
+    font-family: 'Poltawski Nowy';
+    font-size: 30px;
+}
+.slider-btn{
+    border: none;
+    padding: 15px 20px 15px 20px;
+    border-radius: 25px;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    background-color: #C0C0C0;
+}
+.Discover-cards{
+    display: grid;
+    grid-template-columns: repeat(3 ,1fr);
+    justify-content: space-around;  
+    justify-items: center; 
+    padding: 50px;
+    gap: 120px;
+}
+.cards{
+    background-image: url(images/discover-cards-bg.png);
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    height: 282px;
+    width: 326px;
+    background-color: black;
+    color: #C0C0C0;
+    padding: 25px;
+    justify-content: center;
+    align-content: center;
+    border-radius: 25px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    /* border: none; */
+}
+.cards h1{
+    font-size: 20px;
+}
+.cards p {
+    font-size: 18px;
+    line-height: 1.3rem;
+}
+.cards button{
+    justify-self: end;
+    background-color: #C0C0C0;
+    border: none;
+    padding: 15px 20px 15px 20px;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    border-radius: 15px;  
+}
+.cards button:hover{
+    background-color: aliceblue;
+    box-shadow: 2px 2px 2px #e6e6e6;
+}
+.Discover-content{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 50px;
+    margin-left: 17%;
+    margin-right: 17%;
+    padding-bottom: 50px;
+}
+.Discover-content-time-card{
+    display: grid;
+    grid-template-rows: 1fr auto;
+    background-color: black;
+    color: #ffffff;
+    padding: 15px 20px 15px 20px;
+    justify-content: center;
+    text-align: center;
+    border-radius: 25px;
+    font-size: 25px;
+}
+.Discover-content-description p{
+    font-size: 20px;
+    line-height: 1.9rem;
+}
+.Discover-content-time-card{
+    letter-spacing: 5px;
+}
+.time-card-title img{
+    width: 250px;
+}
+.Astronomy{
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    background-color: black;
+    margin-left: 14%;
+    margin-right: 14%;
+    /* height: 420px; */
+    border-radius: 25px;
+    margin-bottom: 80px;
+}
+.Astronomy-img{
+    background-image: url(/img/Astro\ Kit\ —\ NASA\ Dashboard\ 1.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 700px;
+    border-radius: 25px 0 0px 25px;
+}
+.Astronomy-content{
+    margin: 35px;
+    padding: 25px;
+    background-color: #999999;
+    border-radius: 15px;
+    justify-content: center;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.534)99,#999999);
+    color: #ffffff;
+    align-content: center;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+.Astronomy-content h1{
+    font-size: 30px;
+    font-family: 'inter';
+}
+.Astronomy-content p{
+    font-size: 21px;
+    line-height: 1.3rem;
+    font-family: 'castoro';
+}
+.Astronomy-content button{
+    justify-self: end;
+    background-color: #e4e4e4;
+    border: none;
+    padding: 15px 20px 15px 20px;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    border-radius: 15px;  
+}
+.Astronomy-content button:hover{
+    background-color: aliceblue;
+    box-shadow: 2px 2px 2px #e6e6e6;
+}
+
+.journale{
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    margin-left: 14%;
+    margin-right: 14%;
+    margin-bottom: 150px;
+}
+.journale-img{
+    justify-items: start;
+    padding-left: 50px;
+}
+.journale-content{
+    padding: 25px;
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    font-family: 'Poltawski Nowy';
+}
+.journale-content p{
+    padding: 10px 25px 10px 25px;
+    
+    font-size: 18px;
+}
+.journale-content h1 ,.journale-content h2{
+    font-size: 36px;
+    line-height: 0.5rem;
+}
+.journale-content button{
+    margin-left: 20px;
+    justify-self: start;
+    padding: 10px 25px 10px 25px;
+    color: black;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    background-color: #99999900;
+    border: 2px solid #000000;
+    border-radius: 15px;
+}
+.img-dots{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-self: center;
+    align-items: center;
+    gap: 10px;
+}
+
+
 /* ===== Utilities / Layout ===== */
 .container{
   max-width:1200px;
@@ -462,6 +670,9 @@
   padding: 60px 40px;
   max-width: 1200px;
   margin: 0 auto;
+  justify-items: center;
+    align-content: center;
+    text-align: center;
 }
 
 .slidr-text h1{
@@ -483,7 +694,7 @@
   display: flex;
   align-items: center;
 }
-
+  
 .explore-btn{
   display: inline-block;
   background: rgba(255,255,255,0.06);
