--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@
 .journale-content{
     padding: 25px;
     display: grid;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto;
     font-family: 'Poltawski Nowy';
 }
 .journale-content p{
@@ -199,9 +199,14 @@
     
     font-size: 18px;
 }
-.journale-content h1 ,.journale-content h2{
+.journale-content h1 {
     font-size: 36px;
     line-height: 0.5rem;
+}
+.journale-content h2{
+  margin: 40px 0;
+  font-size: 20px;
+  line-height: 0.5rem;
 }
 .journale-content button{
     margin-left: 20px;
